# LOLCountermatcher

./: .gitignore  Cargo.toml  README.md  ddragon.py  lcu.py  main.py  opgg.py  requirements.txt  run.bat  start.bat  stop.bat  tips.json  ugg.py
.github/workflows/: build.yml
src/: ddragon.rs  lcu.rs  main.rs  opgg.rs  state.rs  ugg.rs
src/clients/: lcu.rs  lcu_ws.rs  live_client.rs  mod.rs
src/core/: draft.rs  mod.rs  settings.rs  state.rs  voice.rs
src/providers/: cache.rs  ddragon.rs  mod.rs  opgg.rs  ugg.rs
src/server/: routes.rs
static/: api.js  app.js  components.js  index.html  optimizer.js  state.js  style.css  utils.js
