[package]
name = "lol_countermatcher"
version = "1.0.7"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sysinfo = "0.30.5"
regex = "1.10.3"
rust-embed = "8.2.0"
futures-util = "0.3.30"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
webbrowser = "0.8.12"
chrono = "0.4.35"
